--- a/src/eltempsdsktp/eltempsdsktp.fxml
+++ b/src/eltempsdsktp/eltempsdsktp.fxml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
+
 <?import javafx.scene.control.*?>
-<?import java.lang.*?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eltempsdsktp.Controller">
    <children>
       <MenuBar prefHeight="29.0" prefWidth="800.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -37,7 +31,7 @@
         </items>
       </ToolBar>
       <ToolBar layoutY="571.0" prefHeight="29.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-      <ListView layoutY="69.0" prefHeight="500.0" prefWidth="400.0" />
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="400.0" layoutY="69.0" pickOnBounds="true" preserveRatio="true" />
+      <ListView fx:id="lvLlistaPrediccions" layoutY="69.0" prefHeight="500.0" prefWidth="400.0" />
+      <ImageView fx:id="ivIconPrediccio" fitHeight="150.0" fitWidth="200.0" layoutX="400.0" layoutY="69.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
